--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@
         background-color: var(--bg-color1);
      }
      .area_content_return img{
+        margin-left: 30px;
         width: 45px;
      }
      .area_content_return h1{
