--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,7 @@
      }
      .area_content_return{
         width: 100%;
+        height: 8%;
         display: grid;
         grid-template-columns: 100px 1fr;
         align-items: center;
@@ -1072,6 +1073,9 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+         }
+         .area_content_open > h1{
+            font-size: 0.7rem;
          }
          .area_content_open{
             display: flex;
