--- a/css/style.css
+++ b/css/style.css
@@ -1074,7 +1074,8 @@
             align-items: center;
             flex-direction: column;
          }
-         .area_content_open h1, li{
+         .area_content_open h1, 
+         .area_content_open li{
             font-size: 0.9rem;
          }
          .area_content_open{
