--- a/css/style.css
+++ b/css/style.css
@@ -1153,12 +1153,14 @@
             justify-content: center;
          }
          .area_content_descont{
-            
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
             gap:5px;
+         }
+         .area_content_descont ul{
+            margin-left: 20px;
          }
          .content_endereço_body{
             display: grid;
