--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,6 @@
      .area_img img {
          width: 100%;
          height: 100%;
-         object-fit: contain;
      }
 
      .area_text {
@@ -645,8 +644,8 @@
      }
 
      .area_img img {
-         width: 100px;
-         object-fit: contain;
+         width: 100%;
+         height: 100%;
      }
 
      .area_text {
@@ -961,8 +960,8 @@
      }
 
      .area_img img {
-         width: 100px;
-         object-fit: contain;
+         width: 100%;
+         height: 100%;
      }
 
      .area_text {
@@ -1280,8 +1279,8 @@
      }
 
      .area_img img {
-         width: 100px;
-         object-fit: contain;
+         width: 100%;
+         height: 100%;
      }
 
      .area_text {
@@ -1603,8 +1602,8 @@
      }
 
      .area_img img {
-         width: 100px;
-         object-fit: contain;
+         width: 100%;
+         height: 100%;
      }
 
      .area_text {
