--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,7 @@
      }
 
      .area_content_img {
+        background-color: white;
          width: 100%;
          text-align: center;
          border-bottom: 2px solid var(--bg-color2);
