--- a/css/stardescstyle.css
+++ b/css/stardescstyle.css
@@ -34,7 +34,7 @@ button {
 }
  button a{
   text-decoration: none;
-     color: #fff;
+     color: #ff5900;
  }
 .button_cadastro {
     text-align: center;
